syntax = "proto3";

package grpc;

option go_package = "github.com/vimalkuriensam/auto_gear_nft/listener-service/internals/adaptors/framework/left/http2/proto";

message RegisterRequest {
    string firstName = 1;
    string lastName = 2;
    string password = 3;
    string email = 4;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    bytes data = 3;
    int32 Code = 4;
    string timestamp = 5;
}

service Authentications {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}